--- a/main/templates/main/create_booking.html
+++ b/main/templates/main/create_booking.html
@@ -42,6 +42,7 @@
     {% if schedules %}
     <form id="booking-form" method="post">
       
+      {% csrf_token %}
       <div class="p-6 md:p-8">
         
         <div>
